# a2a-payment-protocol

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html
docs/: api-reference.md  architecture-overview.md  authorization-protocol.md  changelog.md  chargeback-refund-protocol.md  compliance-framework.md  dispute-resolution-protocol.md  escrow-lifecycle.md  escrow-race-conditions.md  multi-tenancy-payments.md  quickstart.md  reconciliation-framework.md  reporting-compliance-exports.md  settlement-operations.md  settlement-protocol.md  spending-policy-schema.md  v1.6.5-validation-report.md  wallet-system.md  webhook-security.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/a2a_payments/: __init__.py  client.py  exceptions.py  types.py  webhook.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: client.ts  errors.ts  index.ts  types.ts  webhook.ts
spec/: events.md  openapi.yaml
