[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-payments"
version = "1.7.0"
description = "Python SDK for the A2A Pulse Payments API"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    { name = "SFOSTER2030" },
]
keywords = ["a2a", "payments", "pulse", "fintech", "escrow"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/SFOSTER2030/a2a-payments"
Documentation = "https://docs.tfsfventures.com/pulse-api"
Repository = "https://github.com/SFOSTER2030/a2a-payments"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_payments"]
